--- a/src/pages/user/TesTkd.css
+++ b/src/pages/user/TesTkd.css
@@ -8,7 +8,11 @@
   /* min-width: 236px; */
   position: relative;
   max-width: 834px;
-  margin: auto;
+  max-height: 650px;
+  /* margin: auto; */
+  background: #fdfdfd;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.21),
+    0px 4px 4px rgba(0, 0, 0, 0.1);
   /* max-height: 300px; */
   /* padding: 10px; */
 }
@@ -52,17 +56,55 @@
 .buttoncontrolpanel {
   display: none;
 }
+.submit-tkd {
+  margin-top: 16px;
+}
+
+/* .form-input-tkd label p {
+  display: inline-block;
+  padding: 5px 10px;
+  border: 2px solid #ccc;
+  border-radius: 8px;
+  background-color: #eee;
+  width: 95%;
+  margin-left: -10;
+}
+
+.form-input-tkd label:hover p{
+  background-color: #83ffb7;
+  opacity: 0.5;
+}
+
+.form-input-tkd label:hover p{
+  cursor: pointer;
+}
+
+.form-input-tkd input[type='radio']:checked + label p{
+  background-color: #2ecc71;
+  color: #fff;
+}
+
+.form-input-tkd input[type='radio'] {
+  display: none;
+} */
 
 /* RESPONSIVE MOBILE */
+@media only screen and (max-width: 575px) {
+  .submit-tkd {
+    margin-top: 16px;
+  }
+}
 @media only screen and (max-width: 767px) {
   .panel-soal {
     max-width: none;
     position: relative;
     max-height: fit-content;
+    transition: max-height 0.3s ease-out;
     /* padding: 10px; */
   }
   .buttoncontrolpanel {
     display: block;
+    transition: 2s;
   }
   .controlpanel {
     display: flex;
